# rlbench-og

./: README.md  batch_collect_data.py  collect_dataset.sh  setup.cfg
colosseum/assets/configs/: basketball_in_hoop.yaml  block_pyramid.yaml  close_drawer.yaml  scoop_with_spatula.yaml  solve_puzzle.yaml  straighten_rope.yaml  take_plate_off_colored_dish_rack.yaml  take_usb_out_of_computer.yaml  toilet_seat_down.yaml  water_plants.yaml
colosseum/assets/json/: block_pyramid.json
colosseum/rlbench/task_ttms/: basketball_in_hoop_occlusion.ttm  block_pyramid.ttm  block_pyramid_occlusion.ttm  close_drawer.ttm  close_drawer_occlusion.ttm  scoop_with_spatula_occlusion.ttm  solve_puzzle.ttm  take_plate_off_colored_dish_rack.ttm  take_plate_off_colored_dish_rack_occlusion.ttm  toilet_seat_down.ttm  toilet_seat_down_occlusion.ttm
colosseum/rlbench/tasks/: basketball_in_hoop_occlusion.py  block_pyramid_occlusion.py  close_drawer_occlusion.py  scoop_with_spatula_occlusion.py  solve_puzzle_occlusion.py  straighten_rope_occlusion.py  take_plate_off_colored_dish_rack_occlusion.py  take_usb_out_of_computer_occlusion.py  toilet_seat_down_occlusion.py  water_plants_occlusion.py
colosseum/tools/: dataset_generator.py  extract_keyframes.py
tools/: dataset_generator.py
