[metadata]
name = rlbench-og
version = 0.0.1
description = RLBench-OG: A Benchmark for Evaluating Robustness and Generalization for Robotic Manipulation
long_description = file: README.md
long_description_content_type = text/markdown
author = Yongjie Bai and Zhouxia Wang and Yang Liu and Kaijun Luo and Yifan Wen and Mingtong Dai and Weixing Chen and Ziliang Chen and Lingbo Liu and Guanbin Li and Liang Lin
author_email = baiyj26@mail2.sysu.edu.cn
license = MIT License
url = https://github.com/baiyu858/rlbench-og

[options]
packages = find:
python_requires = >=3.8

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs,
    venv

max-line-length = 80
